en/9.0/install/install.rst
============
Installation
============

This page is generated by Machine Translation from Japanese.

Installation requirements
=========================

|Fess| can be available in these environments.

-  OS: Windows, Unix, and Java can run OS environment

-  Java: Java 7 or more

If Java is not installed in the environment we want to |Fess| from
http://java.sun.com/ get JDK for Java 7 and above, please install.

Download
========

`http://sourceforge.jp/projects/ |Fess| /releases/ <http://sourceforge.jp/projects/fess/releases/>`__
From the download the latest |Fess| package.

Installation
============

Expand the downloaded fess-server-x.y.zip. If you installed in the UNIX
environment, in the bin added the performing rights to a script.

::

    $ unzip fess-server-x.y.zip
    $ cd fess-server-x.y
    $ chmod +x bin/*.sh   # (Unix環境のみ)

Changing the administrator password
===================================

Administrator account is managed by the application server. |Fess| Server
standard available Tomcat, as well as to the user changing the Tomcat.
Modify the password for the admin account of the conf/tomcat-user.xml if
you want to change.

::

    <user username="admin" password="admin" roles="fess"/>

see the Tomcat documentation or JAAS authentication specification to use
Tomcat-user.XML file management method other than.

SOLR server password change
===========================

To access the Solr into |Fess| server is password becomes necessary.
Change the default passwords in production, etc.

How to change the password, you must first change the password attribute
of the conf/tomcat-user.xml solradmin.

::

      <user username="solradmin" password="solradmin" roles="solr"/>

Modifies the following three files
webapps/fess/WEB-INF/classes/solrlib.dicon, fess\_suggest.dicon and
solr/core1/conf/solrconfig.xml. Write what you specified in
tomcat-user.xml to the following password.

modify the following areas of the solrlib.dicon.

::

    <component class="org.apache.commons.httpclient.UsernamePasswordCredentials">
        <arg>"solradmin"</arg> <!-- ユーザー名 -->
        <arg>"solradmin"</arg> <!-- パスワード -->
    </component>

fess\_suggest.dicon is the following.

::

    <component name="suggestCredentials" class="org.apache.http.auth.UsernamePasswordCredentials">
        <arg>"solradmin"</arg> <!-- ユーザー名 -->
        <arg>"solradmin"</arg> <!-- パスワード -->
    </component>

where the following is the solrconfig.Xml.

::

    <!-- SuggestTranslogUpdateHandler settings -->
    <suggest>
      <solrServer class="org.codelibs.solr.lib.server.SolrLibHttpSolrServer">
        <arg>http://localhost:8080/solr/core1-suggest</arg>
        <credentials>
          <username>solradmin</username> <!-- ユーザー名 -->
          <password>solradmin</password> <!-- パスワード -->
        </credentials>

Change the password for the Tomcat console
==========================================

To manage can manage Solr from |Fess| server deployed on Tomcat context
need a password. Change the default passwords in production, etc.

How to change password the change manager conf/tomcat-user.xml password
attributes.

::

      <user username="manager" password="manager" roles="manager-script"/>

Describes the provided password webapps/fess/WEB-INF/classes/app.dicon
the following points tomcat-user.xml to the next.

::

    <component class="jp.sf.fess.helper.impl.TomcatManagementHelperImpl$SolrInstance">
      <property name="name">"solrServer1"</property>
      <property name="managerUrl">"http://localhost:8080/manager/text/"</property>
      <property name="contextPath">"/solr"</property>
      <property name="username">"manager"</property>
      <property name="password">"manager"</property> <!-- パスワード -->
    </component>

Changing the encryption key
===========================

Login at return path settings, in the use encryption and decryption.
Please change the default password, especially in production.

How to change the change the key value in the
webapps/fess/WEB-INF/classes/app.dicon. Set the 16-character
alphanumeric.

::

    <!-- CHANGE THE FOLLOWING KEY -->
    <property name="key">"1234567890123456"</property>
